fix menu click off for mobile. bind click-off to header instead of document. fix project menu height on mobile

--- a/css/site.styl
+++ b/css/site.styl
@@ -244,11 +244,13 @@ a:visited
 // ******************************************************
 
 // BASIC
-
+  
 html
+  height: 100%
   color: $color-black
   
 body
+  height: 100%
   background-color: $color-white
 
 img
@@ -360,6 +362,7 @@ p.wp-caption-text
   z-index: 100
   &.open
     color: $color-white
+    height: 100%
     #main-menu
       background-color: unset !important
     .menu-item
